serving/ingress/deploy/release.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knative-openshift-ingress
  namespace: knative-serving
spec:
  replicas: 1
  selector:
    matchLabels:
      name: knative-openshift-ingress
  template:
    metadata:
      labels:
        name: knative-openshift-ingress
    spec:
      serviceAccountName: knative-openshift-ingress
      containers:
        - name: knative-openshift-ingress
          image: quay.io/openshift-knative/knative-openshift-ingress:v0.1.2
          command:
          - knative-openshift-ingress
          imagePullPolicy: Always
