serving/ingress/deploy/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: knative-cluster-local-gateway-hack
  namespace: knative-serving-ingress
spec:
  ingress:
  - from:
    - namespaceSelector: {}
  podSelector:
    matchLabels:
      istio: cluster-local-gateway
  policyTypes:
  - Ingress
